--- a/src/main/zip/plugin.xml
+++ b/src/main/zip/plugin.xml
@@ -20,17 +20,11 @@
     <server:required-server-version>6.0.1.0</server:required-server-version>
   </header>
   
-  <!-- Application management based steps -->
+  <!-- Simulator based steps -->
   
-  <step-type name="StepTypeName">
-    <description>Description</description>
-    <properties>
-      <property name="dirOffset">
-        <property-ui type="textBox"
-                     label="Directory Offset"
-                     description="The directory offset relative to the current working directory where the step should run."/>
-      </property>
-    </properties>
+  <step-type name="Stop Simulator">
+    <description>Stops the running simulator. The step fails if no simulator is running.</description>
+    <properties/>
     <post-processing><![CDATA[
         if (properties.get("exitCode") != 0) {
             properties.put(new java.lang.String("Status"), new java.lang.String("Failure"));
@@ -42,7 +36,7 @@
     <command program="${GROOVY_HOME}/bin/groovy">
       <arg value="-cp"/>
       <arg path="classes"/>
-      <arg file="cmd.groovy"/>
+      <arg file="stopSimulator.groovy"/>
       <arg file="${PLUGIN_INPUT_PROPS}"/>
       <arg file="${PLUGIN_OUTPUT_PROPS}"/>
     </command>
